tests/transpiler/x/zig/pure_global_fold.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/pure_global_fold.zig:5:16: error: use of undeclared identifier 'k'
/workspace/mochi/tests/transpiler/x/zig/pure_global_fold.zig:9:11: error: unused local constant
